--- a/Paint/Form2.resx
+++ b/Paint/Form2.resx
@@ -120,53 +120,50 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAABdCAYAAADjaOUDAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxEAAAsRAX9kX5EAAAAGYktHRAD/AP8A/6C9p5MAAAAHdElNRQfiAQ0VFRPxtCcV
-        AAAAHWlUWHRDb21tZW50AAAAAABDcmVhdGVkIHdpdGggR0lNUGQuZQcAAAoUSURBVHhe7Vt/cFTFHd93
-        P2JIgg041txdLg0FBERaI1DN3SWXICkyaKsFaqv8Abbk3l0iELU4OhIBq2inrS1MGELuDsVix5YRKzrS
-        UcbaorZYrZYi/kClSojRxKplpi06vX4+73bTl8tdOC4JSdq3M5957+3bH9/P7ve7+/btd4XIPWjIejVQ
-        DnwVuBI4F/gucDNQA5yde/GnJ2ceqnkOWADMBo5K4c/A9UHgTWDr6REl91q+h6ztwEXAXOB94FGgGLge
-        6AZeAy7NvYqhzfl5FN8FdAIFwD2S0KuSxLW4HpHvrxlaUXIv/SlkfQdolUU8j+tfgcfl80O4viuJ1eZe
-        zdDlvFEK+AauY4AmSagD10bALp9Jij0z4sLFkIgGTIGXASVSZag6zwJOYB3A52PAhpHGoEwKRzX6jRTu
-        j7iyxUlsAkAj53uSeAGgvYyYwBbnSKMEpmC3SuFJ4CYpKUcrEngb8I4Y6SHIeOCAJEBjpXB1ANWFrf6E
-        FFYZO0ldNpIIfA7CvCQJUOAKSYI2wV7hleFHsldIcs1IIlAEYV6U6kECfmCcFPYIrpzcGFYCqle2jCQC
-        hRBGjf0kwLG+WBJiDygCIROBn502Alq4qk9dhU38/OkJJKBGHTMBGmsmAvebC4hppbnxyYsEp4mwbx/w
-        LPDbCbdECmx68Nu4/z2hhQPJ2VX37xS67zlgf17jHI77g0qAhcWEpzkmXI8Cu2M2d2T1kuXOmHC3Gs/C
-        tSfqKK/2JBJI59or43YLR2NwpggHPhORQAI4MXXN7AIRCjQZz2FA9z+TJBA4LMJ+pPEnnJEqfrQNOoGo
-        KLk3LtwdUeFpj2vuDb9YW+eMCvfvQOwYrl1xzfO1JFH33xlHWARkNwzYBljO/3gPeCwVGmYjtnrAGkY5
-        0Jg/JXrNxP8Ho9Con8gsIx5uI7Z6YLh7wDJiqwcGOJFZRmyp0ABVaNSPQqOegGXEw23EGXpArJ833fqx
-        JYT1X8haUo78n7vWMDrcw+ion4ktAsOtQpYRWz1gLWisXUpjnxgYqn3iWC77xE5udEdMG93Ns3pvdIdS
-        NrpBwKb75w3FRjc2sH+JHXhsasuN7u/3v9GNdMeELRy4AK36qdyZP1G+6pKx2JVfkWxtY7c+uVMfDryp
-        esAeqVo0mATmtdClwtiB30mhsCvPnfq7WhbO69mpx658V5vmWbDr1iZ7VLg+QVrs1LvbhTPsh6+E/19J
-        Av5PCxqC5wi9+poeArrvlaSrgf9FSSghlvtS3ScHvKCZ8XxCg/APJ90KPO3wlVh7++x6+krsl64G3fE8
-        b2BHkcsNgh8DIOA6JAobqrzwfzgue+AzW0PN+Y5w4CLV2hD8hCTwiIrTdD/9fgbVV2LFTWscEPwxSaAj
-        qnlWNldUsgcOIa4d7z6KFnnLoo4vzEEPfEgCuD4u3DcszIdg3cC/CXtDYH7ecn+50SuMQ8/U3hJywktl
-        nUmtfpiGAB356GpDbyyzvxDjPpDpdVzpvcU0vfyFti/y50HQJyWBzqjdveinFd4xeP4g2druj1hGXCtZ
-        zziqEEjemSw35H8YrjXGCKNFqtaPD19eBME7AYOAI1JzoS3sD5jUio6s5kAfaroZ042sGZgE0H+Ujn+M
-        u10m9uG6VqZZYi5g8+Tz8iHoM1QfoGtrwaTzWh3eORC0G/EdMc2zi+mhNgek/h9rO8N7iVGGo7H2S1AV
-        utskQIYOSiT1ZDIO0AOR4hvrimED/zBI6H62qpj/EP2+BydsLp5SBEH/TOHiouQ9lhrXSu9HXCfi3os5
-        y+a3Fk+fCHLvUqUQ99bmcTPoLSmDToF9UKNAQtMDi8dEast7SOm+J+5+JaHh/UGpaonBEfu/pbSMnzIe
-        Qr0DdMY09w92VFbm4x6+Qy4I6zq4cXKwGKNQU7L1Xe9HNffGntzfXL1dszfUzoKAhhqJUKXRwriPGQKj
-        J/JXzZ2o6dXXq16xR4IXDiaJaH7ZxRCuCzi6yfVlT5ujdCntAQ5QH7c5vNdt9c4iQbY8Cb00LfFPW5/6
-        Nd13lUEiVJnQwr47S6+7Kl+EfJ8kVcv3uiTVIVWNOj9oIaqVtLD1twnPThaK+78Yra157uMzemIf5whO
-        dG15k2Z/Z8PTKQRmJWWxhYPLkiR8CS0UaD6z4bJxaPXDjIP/XL2zYe50voONKGfWAZNoqZ1PdeHIcmhT
-        RV0hrtB9z3F8vD0Ybttuh0ptM1RLlLzRWjBZSirEtXfvS1934fLgF2G4r7InIPwmV+PCQqFXPkXB7Q3V
-        NeidJXhOjF21wGREufOI20t1tOxrrcXTJkTtpfVQm7ejNs+6LeUzx6Ll9+Dd0Zjm2v0TXx0dbLMLRU01
-        TpsemAkiu9Da3RS6MFw7FWq216ZX1Tsa/OiJwIEJt13uyK7Evqn0+BaxdOPPHWjhHVvPmnE2DHML7u9p
-        mXRBCe5XQ/jXQeSO2JiJ5Sr3sjuSHwanHLRwcAFUqMZQs8aairz6GqNQW+Nc749X86hMbiGWV/YV5ozn
-        l02Nlkwp5v02m/uKqLOU3u5GWPzCzX0NNrfqMucKrXzklIs0rDXLcPXLI8rVOkuprWRWC1gtYLXAqGsB
-        HuY5B+DxQuLMATKYifzfAiLAUqAG4JmyTIGfJjwBy7rzMyTicRczeiXjt8ZbAJeAxN8AtZrKlgsL59KR
-        R664MOGJJQUuJ3mGJlPgsZDjsu4Pcf16moTMr+Qzlqo8F6wC73cDR0ygIIEspZ+MdH+QwnNlx3UFz8/w
-        RCsPjJLAyb47uF5mXuIwkPoZwTj1Prl6NAWeA+Z3vzkByWTTC+w9dRiOeSh8HKgEqJo8W8YD1L9KrTTl
-        2Vw/heV62xz6JbAYKdXZL5KgILzykNvJAk+uqqOGPJpbnyEDD4b2FwZEgKt0CsGVAn2b2Z0kQRUI9lOr
-        G+/YMkxLPHYytv28z5kAf4WoM79rcc/TeNRbpct7+qn0SryjoSrVoxGrQLvioTg1slHVzHaXWqyZAO2F
-        57NU3rNkQ6W1gWV4ydbnyMOhlOFPUii2KvWbBaULtyFS9RbLuCIl0fl45uhC1eLIJH9IpS0r1QaZxwyz
-        8L2MmIf4KeivTcXeIAmoTMkfSX3DXYii4CpdKgHmMBs4fxhnWsmZCVAe9oIZjOvTA5xcyJIvaAc7gAcA
-        qo05A+PSBRqsefhLZ8BcC6qKaWOZjDlVhcqRljZGUAPSjkL8WatGH477nCwI3quRhZVzchmbhsFUk3Ak
-        fG+aNLkQyGoYpUHxJCoF5I/6NoDjNxEFnjaRICGen08N/A+6H6DwLIczZOofiyEjUI7KeJifLc4fs6mB
-        Bk2B1LzA/0HpvmeqEc9ZV6nJy7g3n7k8aHqXrQpl1QPfkC3MyjncpQt7Ta1Lg+LMmi6wLDaGMmg2ipoI
-        VdwRxA0qAX77sJL+xnn2jGpZqtGKDAQYPRHgye3U4Y6CqziOdJl+lZzSRPYft3HSd40kDkMAAAAASUVO
-        RK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAADAAAABdCAYAAADjaOUDAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAAAd0SU1FB+IBDRUVE/G0JxUAAAmlSURBVHhe7Zt/cBTlHcbfvV+GJNiAo+bucmko
+        UECkNQLV3G5yCZJSBm1tgdoqf4Atud27CEQtjo5EwCraaWsLE4aQu8NiaceWESs60lHG2qK2WK2WIv5A
+        rUoSo4lVy0wrOr0+z96+YTnuYkjOzrXdZ+Yzt/veu3vf533f77u3O/uKUUgBl4Ma8EXwVfBZ8G1wPWgE
+        Z4Kilg88ARaA2eAIYPCngbvBy2ArKGp9B3SDC8Bc8Ba4H1SAq8EAeAF8CRSlzgL9oA+UgjsADT0PaOJK
+        8FfA768ARalHwOug09wT4knwGnjQ3BPiHvAGoLEmFhSbrgUM8CUwBrQBGuoFrcBt7dMUe6bodCFgAjPg
+        ZaAScMhw6DwOvGCdtd8DNoCiUjVgcGzl37AA+iNgi9PYBMAk5/es9xRgvhSN2OKcaWTA1I2A2+Q6FkDM
+        ARp4FYRYUCwaDw4AGmAuMLhmwOHCVn8IUDLZaepiFhSLPgWeATTAAGsBTTAnWMZP6geAwdPkGhYUi8rB
+        00DmgQrGAQbLMl7cqJVA9soWFhSLyoCc+xkc53pexBg8y6SBKJAGfsqC/4gUo97aOq6yNv79GRQNyFnH
+        boDJms/AXSyQSipV1tYpyheLTBNGeB94HPx2wg2xUpce+Sa2f08UQ8tcXXV1p9DDT4D9vtY5nPftGrUB
+        KimC7Unhvx/sTroCsdVLlnuTItBp7gv/noSnpiGYTqOef69Vtlt4WiMzhaF9JGJaGhybumZ2qYhqbea+
+        AXT1MfPsunZYGCrqqGlvrJ5/2uwqiIGEqLwzJQK9CRHsTimBDb9Y2+xNiMDvYKwHn/0pJfhl1oOpv7OM
+        OAYsOQaooQ0EnR5wegBykpj1HAOOgREZcJLY6QHKSWLWc4aQ0wNODzgGHAP/jwacJC7SHhDr5013esAx
+        kJFjoLgNONOoY4ByDLCek8RODzg94Bj4bzYAPikDyZEY8NJAzGagfdaJBqInG3Dp6jyz7LgKZCDwy6Tw
+        M2EzBr47tAHU6xEuQzsPQX1oBXysZtVFYxHsikywZlnGgKG9LA24Y/WLzLLjGpWBeR2sZga2k0EhWBq4
+        rWPhvEEDoL9LCS7YdWObOyH876MuygLdwmuo0xDUBxkD6oel8cjZQm+4YtCAHn7OPLuuPm0ZSovl4ezX
+        J0fdAzOeTCsI/l6rZbuTrsDam2e38F2J/VYPDKR8IW1HuT+A7fcADPgPibJ4fQiJedTqgY9c8cZzPYZ2
+        gWxtBH7M/AVdvU+WKbrK937sGrWBFdet8SDwBywDvQkluLK9to49cAhl3Sh7N1Eeqk54Pj0HPfAODeDz
+        QRG4ZmEJghoA/yLuuDbft1ytwfYHZhmMNd0Q9aIn1mE/0wOG9n3rd6VogC/yMTC+jSUNyBeg3gaUDvj2
+        Fuuc8L7Q9kWqD4E+bBnoS7gDi35cGxqD/bczrR14l/VSSuV6lnEIweSt5sFI1HuFEc60bqx+/XjjknIE
+        3gdMA55Y4/kuQ9UGDehhvshqF9+h5mvGfI2sHUwCfH+UL/6x7GZAhcFawDpLWCC1efI5JQj0MQ4f0L+1
+        dNI5nZ7QHAQ6gPLepBLcxXoYNgcYPOk6LXSRebCntelzGCKchTjrsMtp6uFMGdC1WMW1zRUI/h+mCV1l
+        q4r59/C978Joc8WUcgT6ZwaWEpVvsiylVN2Fsj6UvZn0Vs/vrJg+Eebe4JBC2Subx83g25KWdAYcxjDS
+        MMa1xWNiTTWDpvTwQ7c/l1bwedAcVjRRYHWMnzIeQb0O+pJK4Hs76upKsI1rgh/B+g9unBypwCzUhjIm
+        71sJJbDROlSIr6/errjjTbMQoDmMRLTObGFsJ82AYaRk1dyJit5wtewVdyxyvlmnQEqUVF+I4PrBkU3+
+        zwe7PFVLmQ+4sL3X5QldtTU0iwbZ8jT0zLT0P13Wocel6OHLTBPRurRihG+tuuqyEhENv58ZWuEXzUqG
+        2msNNY75gimhVHYguL5tIriT+9j+C+jB2P+J+b3w78PwYev3dPkmzf7WhkezDMzKfLiMyLKMiXBaiWrt
+        p8cvHodWP8wyxdBavPG50/kdDMiXWUetjqb5HC6cWQ5tqm0uwyfGfvAorrx3G13b3RhS21CGXKh8qbN0
+        shWpEFfevs/aylLZ8shnkLjPsycQ/CZ/68Iyodc9wsDd8YZG9M4S7KfHrlpgS6KRK+Wu0tGyL3RWTJuQ
+        cFe1YNi8mnAF122pmTkWLb8H3x1JKv7dPwo38wXb4am8rdHr0rWZMLILrT3AoMuMpqkYZntden2LJ66i
+        J7QDE266xGMdcsrSU1vE0o0/96CFd2w9Y8aZSMwt2L6jY9J5ldhejeBfhJFbkmMmcp2OqWW3ZP4YnLIU
+        I7IAQ4gLe4SrtbHW19JontTVOjf0w9VcKjMyJX3VX+BnqqR6aqJyCi9+YpsrcGnCW8W33U0tfur6kxO2
+        0IquvM/aGr7MbB2mLn+2qF61duTIkaP/VXExz9ngLIvTwWg0E3wDxMBSwAsh15TlE/+acAUsf7uEBTnE
+        5S52ThD/a7wCeAtI/gbk3dRwxZPy1pFLrnhjIpdiEd5O8p44n7gs5Cjgb78DvgKyxeNlfMRcFyzF7d2A
+        97ISBqKB4Wgy+APgMfIGnzf0XNHKBaM08HH/O3i/zGPJYZD9N4Jl8ntygrgOmP/77RVoYji9wN6Ti+Hk
+        zXwK1AEOTS7L4gLqX4GhZP99Bsv7bbuGNLAYyLVfhIHwk4vcPk5cucqgeQzXUbaAXOLC0KE0KgO8S2cQ
+        vFPgcxt2JwPiEIiAfAoAnph1yQNgpBqxAT4KYcAcv3z0wdV4HLesRFN7QD5xPT2TVJ6USSzFvOKiODmz
+        cajZ8y5bdgPMF67PkseeAfIa4DJaBsqZh1Mp9SfASmxVjm+eJJduArK3eI5LgV3nAs4uHFqcmawHUjmV
+        nYM8xo79OzIoLuJnAL829zK6BtgrZx4knazbAAOX9bINUPYE5wPjfHdydgOsy16wwzL5PTHFi4t0xzzY
+        AX4GOGzsB7Asl5iw9ukvVwLzXlB+zxzLl8zZQ4h3fswxwhGQcwjxYa2cfZgDvFgQbrNlpQleXMaCbE0F
+        8oSseyfI1kgMDCuJmVBcicodPk3uApy/SQI8CqQJGuL6+WzxOeh+II3yCpn9xOITM8Au4mJ+tjgfumaL
+        Cc2AWJkB8nlQrv8zDYBXXXniZ4F9zeVBIL8rqIGvAbYwf5zTXS7tBbJ1OS55Zc0lnouNIROajcJPXghl
+        Gc9TUAP878ONoeZ59ow8gMNoBciniYArt2V9iWwAwpku36OSUzAgXvs3t3HSd4/Svm8AAAAASUVORK5C
+        YII=
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
